--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -8,7 +8,7 @@ const menuitems = [
   { href: "/articles", label: "Blog" },
 ];
 
-const navButton = { href: "#", label: "Contactanos" };
+const navButton = { href: "/#contact", label: "Contáctanos" };
 ---
 
 <style>
